Added section for all players previous guesses hints

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,5 +12,13 @@
 </head>
 <body>
     <h1>YOUR GAME HERE!</h1>
+    <!-- Section to show history of all players guesses -->
+    <section class="guessesHistory">
+      <h3>Guesses history</h3>
+      <p>Player 1 <b id="p1LastGuess"></b></p>
+      <p>Player 2 <b id="p2LastGuess"></b></p>
+      <p>Player 3 <b id="p3LastGuess"></b></p>
+      <p>Player 4 <b id="p4LastGuess"></b></p>
+    </section>
 </body>
 </html>
