made inputs for each player and created button

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,7 +11,12 @@
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>YOUR GAME HERE!</h1>
-    <button id="btn">Submit</button>
+    <h1>GUESS THAT NUMBER!</h1>
+    <body>
+      <input type="text" placeholder="Jose" id="joseInput">
+      <input type="text" placeholder="Shawn" id="shawnInput">
+      <input type="text" placeholder="Kong" id="KongInput">
+      <input type="text" placeholder="Abram" id="AbramInput">
+      <button type="button" id="myBtn">Submit your Click!</button>
 </body>
 </html>
